--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -919,17 +919,31 @@ function popupOnClick(e) {
     }
   }
 
+  // if it's a key, go through all doors, add door to the key inventory
+  markers['doors'] = {};
+  let added_doors = [];
+  for (marker of markerLayer._geoList) {
+    let o1 = marker.properties;
+    for (const key_id of (o1.keys||[])) {
+      if (key_id == o.form_id) {
+        //console.log('adding door', o1);
+        added_doors.push(o1.ref_id);
+        markers['doors'][o1.ref_id] = {
+          editor_id: o1.editor_id,
+          name: o1.door_name || itemLocation(o1),
+          //description: itemDescription(o1),
+        }
+      }
+    }
+  }
 
-  for (const [i, section] of Object.entries(['quests', 'weapons', 'perks', 'outfits', 'keys'])) {
+  for (const [i, section] of Object.entries(['quests', 'weapons', 'perks', 'outfits', 'keys', 'doors'])) {
     let list = o[section] || [];
 
-    if (section=='quests') {
-      list = [...list, ...added_quests];
-      list = list.filter((item, pos) => list.indexOf(item) === pos) // deduplicate
-      console.log(list);
-    }
+    if (section=='quests') { list = [...list, ...added_quests]; }
+    if (section=='doors')   { list = [...list, ...added_doors]; }
 
-
+    list = list.filter((item, pos) => list.indexOf(item) === pos) // deduplicate
     if (list.length==0) continue;
 
     div.classList.remove('collapsed');
@@ -938,6 +952,9 @@ function popupOnClick(e) {
     const strip = s=>s.replace( /<[^>]+>/gi, 'X');
 
     for (const form_id of list) {
+
+      //if (section=='doors') console.log(form_id, markers[section], markers[section][form_id]);
+
       let editor_id = markers[section][form_id].editor_id || form_id;
       let name = markers[section][form_id].name || editor_id;
       let desc = markers[section][form_id].description;
@@ -953,7 +970,7 @@ function popupOnClick(e) {
 
       let i0 = document.createElement('span');
       i0.classList.add('fa');
-      i0.classList.add('fa-' + ['scroll','gun','star','shirt','key',''][i]);
+      i0.classList.add('fa-' + ['scroll','gun','star','shirt','key','door-closed',''][i]);
 
       c0.href = wikiPrefix + encodeURIComponent(itemText(name, o));
       //c0.onclick = function() { copyToClipboard(section=='quests' ? editor_id : form_id); return false; };
@@ -1000,7 +1017,31 @@ function popupOnClick(e) {
 
       if (section != 'quests' || Object.keys(objectives).length==0) {
         addWikiIcons && appendIcon(li, 'fa-brands fa-wikipedia-w', wikiPrefix+encodeURIComponent(itemText(name,o)));
+
+        // override title click, 
+        a.onclick = function(e) {
+          if (!e.ctrlKey) { 
+            e.preventDefault();
+
+            // find marker that refers to the item id
+            for (marker of markerLayer._geoList) {
+              let o = marker.properties;
+              let t = getType(o);
+              if (o.form_id == form_id || o.ref_id == form_id) {
+                map.animateTo({center: marker.getCoordinates(), zoom:3, pitch:0, bearing:0});
+                marker.show();
+                popupOnClick({target: marker});
+                marker.openInfoWindow();
+                return false;
+              }
+            }
+
+            copyToClipboard(form_id);
+            return false;
+          }
+        };
       }
+
 
       if (section=='quests') {
         if (Object.keys(objectives).length>0) {
