--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -1153,8 +1153,13 @@ function popupOnClick(e) {
   if (!editable) {
     popup.querySelector('#popup-map-link').href = getMapURL(wikify(o));
     popup.querySelector('#popup-map-link').onclick = copyLink;
+    popup.querySelector('#popup-map-link').title = "Copy Map URL to Clipboard";
+    popup.querySelector('#popup-map-link').innerHTML = '<i class="fa fa-link"></i>';
+
     popup.querySelector('#popup-wiki-link').href = wikiPrefix+encodeURIComponent(itemName(o));
     popup.querySelector('#popup-wiki-link').onclick = null;
+    popup.querySelector('#popup-wiki-link').title = "Fallout London Wiki";
+    popup.querySelector('#popup-wiki-link').innerHTML = '<i class="fa-brands fa-wikipedia-w"></i>';
   } else {
 
     popup.querySelector('#popup-map-link').href = '#';
