--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -48,7 +48,10 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
     </div>
 
     <hr/>
-    <div class="button-panel"><span id="show-all" onclick="showAll()">Show All</span><span id="hide-all" onclick="hideAll()">Hide All</span></div>
+    <div class="button-panel">
+      <button id="show-all" class="btn-link" onclick="showAll()">Show All</button>
+      <button id="hide-all" class="btn-link" onclick="hideAll()">Hide All</button>
+    </div>
 
     <hr/>
 
