--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -1275,35 +1275,37 @@ function getMapRegion(c) {
   let y = c.y;
 
   // let's just do custom polygons for now
-  let areas = {
-    'WestminsterWorld': [
-      {x: -113444.10591124948, y: -49929.56200970712},
-      {x: -74962.76029110316, y: -22239.28156346427},
-      {x: -91861.97556344255, y: 8301.468928715354},
-      {x: -135433.4462656188, y: -6358.0913075308645},
-    ],
-    'CamdenWorld': [
-      {x: -100932.58754827986, y: -95274.3059883011},
-      {x: -69236.4408481617, y: -91995.39426070267},
-      {x: -57869.54685915381, y: -111668.86462629325},
-      {x: -81914.89952820896, y: -132435.30556774998},
-      {x: -107709.00511864995, y: -118226.68808149011},
-    ],
-    'IslingtonWorld': [
-      {x: -47246.6311871809, y: -94856.35279431737},
-      {x: -8681.96221588199, y: -84448.8820552977},
-      {x: -16808.34347785625, y: -65202.18959272708},
-      {x: -59507.487126299966, y: -66556.5864697228},
-    ],
-    'HackneyWorld': [
-      {x: -6551.4791886195035, y: -70391.86483946137},
-      {x: 19306.356228092576, y: -92177.60019054949},
-      {x: 48014.66169074142, y: -69170.23481977418},
-      {x: 22971.24628715413, y: -45552.05443915527},
-    ]
+  let regions = {
+    'LondonWorld': {
+      'WestminsterWorld': [
+        {x: -113444.10591124948, y: -49929.56200970712},
+        {x: -74962.76029110316, y: -22239.28156346427},
+        {x: -91861.97556344255, y: 8301.468928715354},
+        {x: -135433.4462656188, y: -6358.0913075308645},
+      ],
+      'CamdenWorld': [
+        {x: -100932.58754827986, y: -95274.3059883011},
+        {x: -69236.4408481617, y: -91995.39426070267},
+        {x: -57869.54685915381, y: -111668.86462629325},
+        {x: -81914.89952820896, y: -132435.30556774998},
+        {x: -107709.00511864995, y: -118226.68808149011},
+      ],
+      'IslingtonWorld': [
+        {x: -47246.6311871809, y: -94856.35279431737},
+        {x: -8681.96221588199, y: -84448.8820552977},
+        {x: -16808.34347785625, y: -65202.18959272708},
+        {x: -59507.487126299966, y: -66556.5864697228},
+      ],
+      'HackneyWorld': [
+        {x: -6551.4791886195035, y: -70391.86483946137},
+        {x: 19306.356228092576, y: -92177.60019054949},
+        {x: 48014.66169074142, y: -69170.23481977418},
+        {x: 22971.24628715413, y: -45552.05443915527},
+      ]
+    }
   }
 
-  for (const [area, points] of Object.entries(areas)) {
+  for (const [area, points] of (Object.entries(regions[mapId])||{})) {
     const poly = new maptalks.Polygon([points]);
     const point = new maptalks.Coordinate(x, y);
     const layer = new maptalks.VectorLayer('temp').addTo(map);
